--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Gluten:wght@200;400;700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+html {
+  font-family: 'Gluten', cursive, sans-serif;
+  font-size: 14px;
+  overflow: hidden;
 }
