--- a/src/styles/StartPage.css
+++ b/src/styles/StartPage.css
@@ -18,16 +18,23 @@
     height: 40px;
     width: 80%;
     font-family: 'Gluten', cursive, sans-serif;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     letter-spacing: 1px;
     color: rgb(73, 69, 69);
     border: none;
     border-radius: 10px;
+    transition: 0.2s;
     cursor: pointer;
 }
 
 .buttons button:hover {
     border: 4px solid rgb(73, 69, 69);
+    font-size: 1.5rem;
+}
+
+.buttons button.choosen {
+    border: 4px solid rgb(73, 69, 69);
+    font-size: 1.5rem;
 }
 
 .buttons section div:nth-child(1) button {
@@ -46,11 +53,12 @@
     margin-top: 50px;
     height: 70px;
     color: wheat;
-    background-color: teal
+    background-color: teal;
 }
 
 .buttons button:last-child:hover {
     border: 4px solid wheat;
+    font-size: 2rem;
 }
 
 .buttons section div p {
