--- a/src/styles/Guest.css
+++ b/src/styles/Guest.css
@@ -1,6 +1,32 @@
+.guest {
+    text-align: center;
+    height: 100%;
+    margin-bottom: 20px;
+}
+
+.guest h2 {
+    margin-bottom: 20px;
+}
+
+.guest p:nth-of-type(1) {
+    margin-bottom: 20px;
+    font-size: 1.3rem;
+}
+
+.guest img {
+    width: 60%;
+    border-radius: 15px;
+    border: 4px solid wheat;
+    margin-bottom: 10px;
+}
+
+.guest p:nth-of-type(2) {
+    font-size: 1.5rem;
+}
+
 .progress {
     position: relative;
-    width: 100%;
+    margin: 50px 20px 0 20px;
     height: var(--progressionBarHeight);
     border: var(--progressionBarBorder) solid rgb(73, 69, 69);
     border-radius: 15px;
