--- a/src/styles/Info.css
+++ b/src/styles/Info.css
@@ -9,9 +9,19 @@
 }
 
 .info a {
-    font-size: 4rem;
-    padding: 0 20px 0 20px;
+    display: inline-block;
+    height: 50px;
+    width: 50px;
+    border-radius: 25px;
+    background-color: wheat;
+    margin: 0 20px 0 20px;
 }
+
+.svg-inline--fa.fa-w-16 {
+    height: 100%;
+    width: 100%;
+}
+
 
 .info a:nth-of-type(1) {
     color: tomato;
