--- a/src/styles/Info.css
+++ b/src/styles/Info.css
@@ -8,13 +8,14 @@
     font-size: 1.2rem;
 }
 
-.info a {
+.info button {
     display: inline-block;
     height: 50px;
     width: 50px;
+    margin: 0 20px 0 20px;
+    border: none;
     border-radius: 25px;
     background-color: wheat;
-    margin: 0 20px 0 20px;
 }
 
 .svg-inline--fa.fa-w-16 {
@@ -23,10 +24,10 @@
 }
 
 
-.info a:nth-of-type(1) {
+.info button:nth-of-type(1) {
     color: tomato;
 }
 
-.info a:nth-of-type(2) {
+.info button:nth-of-type(2) {
     color: yellowgreen;
 }
