--- a/src/styles/Results.css
+++ b/src/styles/Results.css
@@ -2,13 +2,52 @@
     height: 100%;
 }
 
+.summary {
+    display: flex;
+    height: 10%;
+    margin-bottom: 20px;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.summary div {
+    height: 100%;
+
+}
+
+.summary div p:nth-child(1) {
+    display: inline-block;
+    margin-right: 10px;
+    height: 100%;
+    vertical-align: middle;
+    background-color: wheat;
+    border-radius: 50%;
+    border: 4px solid wheat;
+    text-align: center;
+}
+
+.summary div p:nth-child(2) {
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 2rem;
+}
+
+.summary div:nth-child(1) p:first-child {
+    color: tomato;
+}
+
+.summary div:nth-child(2) p:first-child {
+    color: yellowgreen;
+}
+
+
 .answers {
     display: flex;
-    height: 85%;
+    height: 65%;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    align-content: center;
+    overflow-y: auto;
 }
 
 .answers div {
