--- a/src/styles/Settings.css
+++ b/src/styles/Settings.css
@@ -26,3 +26,77 @@
 .settings button:nth-of-type(2) {
     color: yellowgreen;
 }
+
+.timer {
+    position: relative;
+    display: inline-block;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    height: 40px;
+    width: 100%;
+}
+
+
+.icon {
+    position: absolute;
+    top: 0;
+    left: 20px;
+    font-size: 2.5rem;
+}
+
+.strip {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(0, 50%);
+    display: inline-block;
+    height: 20px;
+    width: 80%;
+    background-color: yellowgreen;
+    border: 4px solid wheat;
+    border-radius: 15px;
+}
+
+
+
+
+.indicator {
+    position: absolute;
+    top: 0;
+    left: 15%;
+    height: 30px;
+    width: 30px;
+    transform: translate(0, calc(-50% + 6px));
+    border-radius: 50%;
+    background-color: teal;
+    border: 2px solid wheat;
+    cursor: move;
+}
+
+.strip p:nth-child(2) {
+    position: absolute;
+    top: -30px;
+    left: 15%;
+    width: 30px;
+    font-size: 1.5rem;
+}
+
+.strip p:nth-child(3) {
+    position: absolute;
+    top: -30px;
+    left: 45%;
+    width: 30px;
+    font-size: 1.5rem;
+}
+
+.strip p:nth-child(4) {
+    position: absolute;
+    top: -30px;
+    left: 75%;
+    width: 30px;
+    font-size: 1.5rem;
+}
+
+.icon .svg-inline--fa {
+    height: 40px;
+}
