--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -37,3 +37,13 @@
     height: 100%;
     width: 95%;
 }
+
+@media(max-width: 320px) {
+    .form button {
+        margin: 0 45px 0 45px;
+    }
+
+    .form button:last-child {
+        margin: -45px auto 0 auto;
+    }
+}
