New css rules were added for 480px resolutions device

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -29,3 +29,13 @@ footer {
         font-size: 0.9rem;
     }
 }
+
+@media(max-width: 480px) {
+    header {
+        font-size: 1.2rem;
+    }
+
+    main {
+        padding: 30px;
+    }
+}
