--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -47,3 +47,13 @@
         margin: -45px auto 0 auto;
     }
 }
+
+@media(max-width: 480px) {
+    .form button {
+        margin: 0 80px 0 80px;
+    }
+
+    .form button:last-child {
+        margin: -55px auto 0 auto;
+    }
+}
