--- a/src/styles/Guest.css
+++ b/src/styles/Guest.css
@@ -62,3 +62,9 @@
         margin: 20px 20px 0 20px;
     }
 }
+
+@media(max-width: 480px) {
+    .progress {
+        margin: 50px 60px 0 60px;
+    }
+}
