--- a/src/styles/Greetings.css
+++ b/src/styles/Greetings.css
@@ -2,7 +2,7 @@
     height: 100%;
 }
 
-@media(max-width: 480px) {
+@media(max-width: 480px) and (min-width: 324px) {
     .greetings {
         font-size: 1.3rem;
     }
