--- a/src/styles/Info.css
+++ b/src/styles/Info.css
@@ -33,7 +33,7 @@
     color: yellowgreen;
 }
 
-@media(max-width: 480px) {
+@media(max-width: 480px) and (min-width: 324px) {
     .info p {
         font-size: 1.5rem;
     }
