--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,10 +9,16 @@
 html {
   font-family: 'Gluten', cursive, sans-serif;
   font-size: 14px;
+  background-color: black;
   overflow: hidden;
 }
 
-:root {
+#root {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
   --progressionBarHeight: 40px;
   --progressionBarBorder: 4px;
 }
