--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -48,12 +48,23 @@
     }
 }
 
-@media(min-width: 324px) {
+@media(min-width: 324px) and (orientation: portrait) {
     .form button {
         margin: 0 80px 0 80px;
     }
 
     .form button:last-child {
         margin: -55px auto 0 auto;
+    }
+}
+
+@media(max-width: 480px) and (orientation: landscape) {
+
+    .form button {
+        margin: 0 40px 0 40px;
+    }
+
+    .form button:last-child {
+        margin: -10px auto 0 auto;
     }
 }
