--- a/src/styles/Greetings.css
+++ b/src/styles/Greetings.css
@@ -2,8 +2,14 @@
     height: 100%;
 }
 
-@media(min-width: 324px) {
+@media(min-width: 324px) and (orientation: portrait) {
     .greetings {
         font-size: 1.3rem;
+    }
+}
+
+@media(max-width: 480px) and (orientation: landscape) {
+    .greetings {
+        font-size: 1.2rem;
     }
 }
