--- a/src/styles/Guest.css
+++ b/src/styles/Guest.css
@@ -63,12 +63,44 @@
     }
 }
 
-@media(min-width: 324px) {
+@media(min-width: 324px) and (orientation: portrait) {
     .guest img {
         width: 50%;
     }
 
     .progress {
         margin: 50px 60px 0 60px;
+    }
+}
+
+@media(max-width: 480px) and (orientation: landscape) {
+    .guest h2 {
+        margin-bottom: 10px;
+    }
+
+    .guest p:nth-of-type(1) {
+        margin-bottom: 10px;
+        font-size: 1.2rem;
+    }
+
+    .guest img {
+        float: left;
+        width: 40%;
+        margin-right: 5px;
+    }
+
+    .guest p:nth-of-type(2) {
+        margin-top: 20px;
+        font-size: 1.5rem;
+    }
+
+    .progress {
+        margin: 50px 25px 0 210px;
+    }
+
+    .guest::after {
+        content: "";
+        clear: both;
+        display: table;
     }
 }
