--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -48,3 +48,14 @@ footer {
         padding: 5px 15px 5px 15px;
     }
 }
+
+@media(max-width: 640px) and (min-width: 482px) and (orientation: landscape) {
+    main {
+        height: 80%;
+        padding: 0px 15px 0px 15px;
+    }
+
+    footer {
+        height: 10%;
+    }
+}
