--- a/src/styles/Greetings.css
+++ b/src/styles/Greetings.css
@@ -13,3 +13,10 @@
         font-size: 1.2rem;
     }
 }
+
+@media(max-width: 640px) and (min-width: 482px) and (orientation: landscape) {
+    .greetings {
+        height: 90%;
+        font-size: 1.2rem;
+    }
+}
