--- a/src/styles/Settings.css
+++ b/src/styles/Settings.css
@@ -127,3 +127,9 @@
         font-size: 1.2rem;
     }
 }
+
+@media(max-width: 640px) and (min-width: 482px) and (orientation: landscape) {
+    .settings button {
+        margin: 0 50px 0 50px;
+    }
+}
