--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -16,6 +16,7 @@ footer {
 
 header {
     height: 10%;
+    font-size: 1.3rem;
 }
 
 main {
@@ -27,35 +28,25 @@ footer {
     height: 5%;
 }
 
-@media(max-width: 320px) {
-    header {
-        font-size: 0.9rem;
-    }
-}
-
-@media(min-width: 324px) and (orientation: portrait) {
-    header {
-        font-size: 1.2rem;
-    }
-
-    main {
-        padding: 30px;
-    }
-}
-
-@media(min-width: 360px) and (orientation: portrait) {
+@media(max-width: 375px) and (max-height:720px) {
     header {
         font-size: 1rem;
     }
 }
 
-@media(max-width: 480px) and (orientation: landscape) {
-    main {
-        padding: 5px 15px 5px 15px;
+@media(max-width: 320px) and (max-height: 480px) {
+    header {
+        font-size: 0.9rem;
     }
 }
 
-@media(max-width: 640px) and (min-width: 482px) and (orientation: landscape) {
+/* @media(max-width: 480px) and (max-height: ) {
+    main {
+        padding: 5px 15px 5px 15px;
+    }
+} */
+
+/* @media(max-width: 640px) and (min-width: 482px) and (orientation: landscape) {
     main {
         height: 80%;
         padding: 0px 15px 0px 15px;
@@ -64,4 +55,4 @@ footer {
     footer {
         height: 10%;
     }
-}
+} */
