--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -12,7 +12,7 @@
     display: inline-block;
     height: 50px;
     width: 50px;
-    margin: 0 20px 0 20px;
+    margin: 0 80px 0 80px;
     border: none;
     border-radius: 50%;
     background-color: wheat;
@@ -24,7 +24,7 @@
     display: block;
     height: 70px;
     width: 70px;
-    margin: 20px auto 0 auto;
+    margin: -50px auto 0 auto;
     color: yellowgreen;
 }
 
@@ -38,7 +38,17 @@
     width: 95%;
 }
 
-@media(max-width: 320px) {
+@media(max-width: 375px) and (max-height:720px) {
+    .form button {
+        margin: 0 55px 0 55px;
+    }
+
+    .form button:last-child {
+        margin: 10px auto 0 auto;
+    }
+}
+
+@media(max-width: 320px) and (max-height: 480px) {
     .form button {
         margin: 0 45px 0 45px;
     }
@@ -48,17 +58,8 @@
     }
 }
 
-@media(min-width: 324px) and (orientation: portrait) {
-    .form button {
-        margin: 0 80px 0 80px;
-    }
 
-    .form button:last-child {
-        margin: -55px auto 0 auto;
-    }
-}
-
-@media(min-width: 360px) and (max-width: 414px) and (orientation: portrait) {
+/* @media(min-width: 360px) and (max-width: 414px) and (orientation: portrait) {
     .form button {
         margin: 0 45px 0 45px;
     }
@@ -90,4 +91,4 @@
     .form button:last-child {
         margin: -55px auto 0 auto;
     }
-}
+} */
