--- a/src/styles/Greetings.css
+++ b/src/styles/Greetings.css
@@ -1,22 +1,23 @@
 .greetings {
     height: 100%;
+    font-size: 1.5rem;
 }
 
-@media(min-width: 324px) and (orientation: portrait) {
+@media(max-width: 375px) and (max-height:720px) {
     .greetings {
         font-size: 1.3rem;
     }
 }
 
-@media(max-width: 480px) and (orientation: landscape) {
+/* @media(max-width: 480px) and (orientation: landscape) {
     .greetings {
         font-size: 1.2rem;
     }
-}
+} */
 
-@media(max-width: 640px) and (min-width: 482px) and (orientation: landscape) {
+/* @media(max-width: 640px) and (min-width: 482px) and (orientation: landscape) {
     .greetings {
         height: 90%;
         font-size: 1.2rem;
     }
-}
+} */
