--- a/src/styles/Question.css
+++ b/src/styles/Question.css
@@ -9,7 +9,7 @@
 }
 
 .question img {
-    width: 60%;
+    width: 50%;
     border-radius: 15px;
     border: 4px solid wheat;
     margin-bottom: 20px;
@@ -27,7 +27,7 @@
     text-align: center;
 }
 
-@media(max-width: 320px) {
+@media(max-width: 320px) and (max-height: 480px) {
     .question {
         margin-bottom: 10px;
     }
@@ -42,7 +42,7 @@
     }
 }
 
-@media(max-width: 480px) and (orientation: landscape) {
+/* @media(max-width: 480px) and (orientation: landscape) {
     .question {
         margin-bottom: 10px;
     }
@@ -87,4 +87,4 @@
         width: 70%;
         margin: 5px auto 10px auto;
     }
-}
+} */
