--- a/src/styles/Settings.css
+++ b/src/styles/Settings.css
@@ -2,9 +2,13 @@
     text-align: center;
 }
 
+.settings h2 {
+    font-size: 1.5rem;
+}
+
 .explanation {
     text-align: justify;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     margin-top: 10px;
     margin-bottom: 40px;
 }
@@ -13,7 +17,7 @@
     display: inline-block;
     height: 50px;
     width: 50px;
-    margin: 0 20px 0 20px;
+    margin: 0 40px 0 40px;
     border: none;
     border-radius: 25px;
     background-color: wheat;
@@ -106,7 +110,7 @@
     height: 40px;
 }
 
-@media(min-width:324px) and (orientation: portrait) {
+@media(max-width: 375px) and (max-height:720px) {
     .explanation {
         font-size: 1.3rem;
     }
@@ -116,7 +120,7 @@
     }
 }
 
-@media(max-width: 480px) and (orientation: landscape) {
+/* @media(max-width: 480px) and (orientation: landscape) {
 
     .settings h2 {
         margin-top: 10px;
@@ -132,4 +136,4 @@
     .settings button {
         margin: 0 50px 0 50px;
     }
-}
+} */
