--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -40,13 +40,11 @@ footer {
     }
 }
 
-/* @media(max-width: 480px) and (max-height: ) {
-    main {
-        padding: 5px 15px 5px 15px;
+@media(max-width: 720px) and (max-height: 375px) and (orientation: landscape) {
+    header {
+        font-size: 1.2rem;
     }
-} */
 
-/* @media(max-width: 640px) and (min-width: 482px) and (orientation: landscape) {
     main {
         height: 80%;
         padding: 0px 15px 0px 15px;
@@ -55,4 +53,14 @@ footer {
     footer {
         height: 10%;
     }
-} */
+}
+
+@media(max-width: 480px) and (orientation: landscape) {
+    header {
+        font-size: 1rem;
+    }
+
+    main {
+        padding: 5px 15px 5px 15px;
+    }
+}
