--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -58,18 +58,7 @@
     }
 }
 
-
-/* @media(min-width: 360px) and (max-width: 414px) and (orientation: portrait) {
-    .form button {
-        margin: 0 45px 0 45px;
-    }
-
-    .form button:last-child {
-        margin: 10px auto 0 auto;
-    }
-}
-
-@media(max-width: 480px) and (orientation: landscape) {
+@media(max-width: 720px) and (max-height: 375px) and (orientation: landscape) {
     .form button {
         margin: 0 40px 0 40px;
     }
@@ -78,17 +67,3 @@
         margin: -10px auto 0 auto;
     }
 }
-
-@media(max-width: 640px) and (min-width: 482px) and (orientation: landscape) {
-    .form h2 {
-        margin-bottom: 15px;
-    }
-
-    .form button {
-        margin: 0 70px 0 70px;
-    }
-
-    .form button:last-child {
-        margin: -55px auto 0 auto;
-    }
-} */
