--- a/src/styles/Greetings.css
+++ b/src/styles/Greetings.css
@@ -9,15 +9,15 @@
     }
 }
 
-/* @media(max-width: 480px) and (orientation: landscape) {
-    .greetings {
-        font-size: 1.2rem;
-    }
-} */
-
-/* @media(max-width: 640px) and (min-width: 482px) and (orientation: landscape) {
+@media(max-width: 720px) and (max-height: 375px) and (orientation: landscape) {
     .greetings {
         height: 90%;
         font-size: 1.2rem;
     }
-} */
+}
+
+@media(max-width: 480px) and (orientation: landscape) {
+    .greetings {
+        font-size: 1.2rem;
+    }
+}
