--- a/src/styles/Guest.css
+++ b/src/styles/Guest.css
@@ -74,18 +74,7 @@
 }
 
 
-
-/* @media(min-width: 360px) and (orientation: portrait) {
-    .guest img {
-        width: 60%;
-    }
-
-    .progress {
-        margin: 50px 40px 0 40px;
-    }
-}
-
-@media(max-width: 480px) and (orientation: landscape) {
+@media(max-width: 720px) and (max-height:375px) and (orientation: landscape) {
     .guest h2 {
         margin-bottom: 10px;
     }
@@ -117,17 +106,44 @@
     }
 }
 
-@media(max-width: 640px) and (min-width: 482px) and (orientation: landscape) {
+@media(max-width: 640px) and (max-height:480px) and (orientation: landscape) {
+    .guest img {
+        width: 40%;
+    }
+
+    .progress {
+        margin: 10px 60px 0 60px;
+    }
+}
+
+@media(max-width: 640px) and (max-height:360px) and (orientation: landscape) {
+    .guest h2 {
+        margin-bottom: 10px;
+    }
+
     .guest p:nth-of-type(1) {
         margin-bottom: 10px;
         font-size: 1.2rem;
     }
 
     .guest img {
-        width: 45%;
+        float: left;
+        width: 40%;
+        margin-right: 5px;
+    }
+
+    .guest p:nth-of-type(2) {
+        margin-top: 20px;
+        font-size: 1.5rem;
     }
 
     .progress {
-        margin: 20px 80px 0 80px;
+        margin: 50px 25px 0 210px;
     }
-} */
+
+    .guest::after {
+        content: "";
+        clear: both;
+        display: block;
+    }
+}
