--- a/src/styles/Info.css
+++ b/src/styles/Info.css
@@ -33,12 +33,8 @@
     color: yellowgreen;
 }
 
-/* @media(max-width: 640px) and (orientation: landscape) {
+@media(max-width: 720px) and (max-height:375px) and (orientation: landscape) {
     .info p {
-        margin-top: 0px;
+        font-size: 1.2rem;
     }
-
-    .info button {
-        margin: 0 50px 0 50px;
-    }
-} */
+}
