--- a/src/styles/Question.css
+++ b/src/styles/Question.css
@@ -42,7 +42,7 @@
     }
 }
 
-/* @media(max-width: 480px) and (orientation: landscape) {
+@media(max-width: 720px) and (max-height: 375px) and (orientation: landscape) {
     .question {
         margin-bottom: 10px;
     }
@@ -69,7 +69,7 @@
     }
 }
 
-@media(max-width: 640px) and (min-width: 482px) and (orientation: landscape) {
+@media(max-width: 640px) and (max-height: 480px) and (orientation: landscape) {
     .question {
         margin-bottom: 10px;
     }
@@ -79,7 +79,7 @@
     }
 
     .question img {
-        width: 45%;
+        width: 40%;
         margin-bottom: 5px;
     }
 
@@ -87,4 +87,31 @@
         width: 70%;
         margin: 5px auto 10px auto;
     }
-} */
+}
+
+@media(max-width: 640px) and (max-height: 360px) and (orientation: landscape) {
+    .question {
+        margin-bottom: 10px;
+    }
+
+    .question p {
+        font-size: 1.2rem;
+        margin-bottom: 5px;
+    }
+
+    .question img {
+        width: 40%;
+        float: left;
+    }
+
+    .question input {
+        width: 50%;
+        margin: 10px auto 15px auto;
+    }
+
+    .form::after {
+        content: "";
+        clear: both;
+        display: table;
+    }
+}
