--- a/src/styles/Results.css
+++ b/src/styles/Results.css
@@ -91,8 +91,8 @@
     width: 65%;
 }
 
-/* 
-@media(max-width: 480px) and (orientation: landscape) {
+
+@media(max-width: 720px) and (max-height: 375px) and (orientation: landscape) {
     .summary {
         height: 15%;
         margin-bottom: 10px;
@@ -105,4 +105,4 @@
     .results button {
         margin: 10px auto 10px auto;
     }
-} */
+}
