--- a/src/styles/Settings.css
+++ b/src/styles/Settings.css
@@ -120,8 +120,18 @@
     }
 }
 
-/* @media(max-width: 480px) and (orientation: landscape) {
+@media(max-width: 720px) and (max-height: 375px) and (orientation: landscape) {
+    .settings button {
+        margin: 0 50px 0 50px;
+    }
 
+    .explanation {
+        margin-bottom: 20px;
+        font-size: 1.2rem;
+    }
+}
+
+@media(max-width: 480px) and (orientation: landscape) {
     .settings h2 {
         margin-top: 10px;
     }
@@ -131,9 +141,3 @@
         font-size: 1.2rem;
     }
 }
-
-@media(max-width: 640px) and (min-width: 482px) and (orientation: landscape) {
-    .settings button {
-        margin: 0 50px 0 50px;
-    }
-} */
